--- a/package.json
+++ b/package.json
@@ -21,7 +21,18 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.8",
+    "@capacitor/android": "^7.2.0",
+    "@capacitor/camera": "^7.0.1",
+    "@capacitor/cli": "^7.2.0",
+    "@capacitor/core": "^7.2.0",
+    "@capacitor/filesystem": "^7.0.1",
+    "@capacitor/preferences": "^7.0.1",
+    "@ionic/angular": "^8.5.5",
+    "@ionic/cli": "^7.2.1",
+    "@ionic/core": "^8.5.5",
+    "@ionic/pwa-elements": "^3.3.0",
     "express": "^4.18.2",
+    "native-run": "^2.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
