--- a/angular.json
+++ b/angular.json
@@ -67,6 +67,7 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {},
           "configurations": {
             "production": {
               "buildTarget": "whatsaap-clone-front:build:production"
