--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "whatsaap-clone-front",
   "version": "0.0.0",
   "scripts": {
+    "dev:android": "ng build --watch",
+    "sync:android": "npx cap sync android",
+    "run:android": "npx cap run android",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -21,7 +24,7 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.8",
-    "@capacitor/android": "^7.2.0",
+    "@capacitor/android": "7.2.0",
     "@capacitor/camera": "^7.0.1",
     "@capacitor/cli": "^7.2.0",
     "@capacitor/core": "^7.2.0",
@@ -41,6 +44,7 @@
     "@angular-devkit/build-angular": "^19.1.8",
     "@angular/cli": "^19.1.8",
     "@angular/compiler-cli": "^19.1.0",
+    "@ionic/lab": "^3.2.15",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
